--- a/api-football.css
+++ b/api-football.css
@@ -42,8 +42,10 @@ Version : 1.1.8
     --player-photo-large: 30px;
  }
 #wg-api-football-livescore, #wg-api-football-standings, #wg-api-football-fixtures, #wg-api-football-fixture, #wg-api-football-fixture-modal {
-    width:50%;
     margin: auto;
+    width: 40%;
+    border: 3px solid green;
+    padding: 10px;
 }
 
 #livescore, #standings, #fixtures, #fixture, #fixture-modal, #fixture_events, #fixture_statistics, #fixture_lineups, #fixture_players {
