--- a/style.css
+++ b/style.css
@@ -11,3 +11,12 @@ body {
     align-items: center;
     margin: 0 auto;
 }
+ .banner__header{
+    white-space: nowrap;
+}
+
+.banner__header > h1 {
+  width: 300px;
+  display: inline-block;
+}
+ 
