--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 } 
 nav{
   display: flex;
-  height: 80px;
+  height: 60px;
   width: 100%;
-  background: #1b1b1b;
+  background: #76e55b;
   align-items: center;
   justify-content: space-between;
   padding: 0 50px 0 100px;
