--- a/api-football.css
+++ b/api-football.css
@@ -20,26 +20,32 @@ Version : 1.1.8
     --secondary-padding: .5rem;
     --button-info-font-size: 9px;
     --button-info-line-height: 16px;
-    --modale-background-overlay: rgba(0,0,0,0.4);
-    --modale-close-size: 28px;
-    --modale-elapsed-time: 12px;
-    --modale-teams-name: 18px;
-    --modale-teams-name-small: 12px;
-    --modale-teams-name-line-height: 20px;
-    --modale-score: 32px;
-    --modale-score-small: 20px;
-    --modale-players-grid-line-height: 20px;
-    --modale-players-grid-line-height-small: 15px;
-    --modale-players-grid-line-height-large: 25px;
-    --standings-team-form-font-size: 9px;
+
+    --modale-background-overlay: rgba(0,0,0,0.4); /* Only for modale */
+    --modale-close-size: 28px; /* Only for the close button in the modale */
+    --modale-elapsed-time: 12px; /* Only for elapsed time in the modale or FIXTURE widget */
+    --modale-teams-name: 18px; /* Only for Teams Name in the modale or FIXTURE widget */
+    --modale-teams-name-small: 12px; /* Only for Teams Name in the modale or FIXTURE widget <480px */
+    --modale-teams-name-line-height: 20px; /* Only for Teams Name in the modale or FIXTURE widget */
+    --modale-score: 32px; /* Only for Score in the modale or FIXTURE widget >480px */
+    --modale-score-small: 20px; /* Only for Score in the modale or FIXTURE widget <480px */
+    --modale-players-grid-line-height: 20px; /* Only for players on the lineups grid in the modale or FIXTURE widget */
+    --modale-players-grid-line-height-small: 15px; /* Only for players on the lineups grid in the modale or FIXTURE widget <480px */
+    --modale-players-grid-line-height-large: 25px; /* Only for players on the lineups grid in the modale or FIXTURE widget >1024px */
+
+    /* STANDINGS WIDGET ONLY */
+    --standings-team-form-font-size: 9px; /* Only for team form and info button */
     --standings-team-form-line-height: 16px;
-    --flags-size: 20px;
-    --teams-logo-size: 60px;
-    --teams-logo-size-large: 100px;
-    --teams-logo-size-medium: 60px;
-    --teams-logo-border: 1px solid var(--background-color-header);
-    --player-photo: 15px;
-    --player-photo-large: 30px;
+
+    /* LOGOS / FLAGS / PHOTOS */
+    --flags-size: 18px;
+    --teams-logo-size: 18px;
+    --teams-logo-size-large: 100px; /* Only in the modale or FIXTURE widget */
+    --teams-logo-size-medium: 50px; /* Only in the modale or FIXTURE widget <480px */
+    --teams-logo-border: 1px solid var(--background-color-header); /* 0px for no border, Only in the modale or FIXTURE widget */
+    --player-photo: 15px;  /* Only in the modale or FIXTURE widget */
+    --player-photo-large: 30px;  /* Only in the modale or FIXTURE widget <480px */
+
  }
 #wg-api-football-livescore, #wg-api-football-standings, #wg-api-football-fixtures, #wg-api-football-fixture, #wg-api-football-fixture-modal {
     margin: 0 auto;
