--- a/api-football.css
+++ b/api-football.css
@@ -4,7 +4,7 @@ Version : 1.1.8
  :root {
     --font: "Raleway", sans-serif;
     --background-color: #000;
-    --background-color-header: #112c16;
+    --background-color-header: #709f79;
     --color-text: #fff;
     --color-text-header: #fff;
     --color-green: #60ab65;
@@ -38,7 +38,7 @@ Version : 1.1.8
     --standings-team-form-line-height: 16px;
 
     /* LOGOS / FLAGS / PHOTOS */
-    --flags-size: 18px;
+    --flags-size: 0px;
     --teams-logo-size: 18px;
     --teams-logo-size-large: 100px; /* Only in the modale or FIXTURE widget */
     --teams-logo-size-medium: 50px; /* Only in the modale or FIXTURE widget <480px */
