--- a/api-football.css
+++ b/api-football.css
@@ -4,7 +4,7 @@ Version : 1.1.8
  :root {
     --font: "Raleway", sans-serif;
     --background-color: #000;
-    --background-color-header: ##5fbd56;
+    --background-color-header: #5fbd56;
     --color-text: #fff;
     --color-text-header: #fff;
     --color-green: #60ab65;
