--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ nav{
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 nav .logo{
   color: #fff;
