--- a/api-football.css
+++ b/api-football.css
@@ -48,8 +48,9 @@ Version : 1.1.8
 
  }
 #wg-api-football-livescore, #wg-api-football-standings, #wg-api-football-fixtures, #wg-api-football-fixture, #wg-api-football-fixture-modal {
-    margin: 0 auto;
+    margin: 0 0;
     width: 40%;
+
     
 }
 
