--- a/api-football.css
+++ b/api-football.css
@@ -48,8 +48,8 @@ Version : 1.1.8
 
  }
 #wg-api-football-fixtures {
-    margin: 0 auto;
-    width: 50%;
+    margin: auto;
+    width: 80%;
 
     
 }
