--- a/style.css
+++ b/style.css
@@ -145,8 +145,7 @@ body {
   display: inline-block;
   }
 
-.webname {
-  text-decoration: none;
-  color: #f2f2f2;
-  transition: all 0.3s ease;
-}
+  .webname, .webname:hover, .webname:focus, .webname:active {
+    text-decoration: none;
+    color: #f2f2f2;
+    transition: all 0.3s ease;
