--- a/livestreams/1/style.css
+++ b/livestreams/1/style.css
@@ -123,3 +123,9 @@ input[type="checkbox"]{
   text-align: center;
   margin: auto;
 }
+
+h2, h2:hover, h2:focus, h2:active {
+    text-decoration: none;
+    color: #f2f2f2;
+    transition: all 0.3s ease;
+}
