--- a/livestreams/1/style.css
+++ b/livestreams/1/style.css
@@ -128,3 +128,9 @@ input[type="checkbox"]{
     text-decoration: none;
     color: black;
 }
+
+.webname, .webname:hover, .webname:focus, .webname:active {
+  text-decoration: none;
+  color: #f2f2f2;
+  transition: all 0.3s ease;
+}
