--- a/livestreams/8/style.css
+++ b/livestreams/8/style.css
@@ -127,5 +127,10 @@ input[type="checkbox"]{
 h2, h2:hover, h2:focus, h2:active {
   text-decoration: none;
   color: black;
+}
+
+.webname, .webname:hover, .webname:focus, .webname:active {
+  text-decoration: none;
+  color: #f2f2f2;
   transition: all 0.3s ease;
 }
