--- a/livestreams/style.css
+++ b/livestreams/style.css
@@ -119,3 +119,14 @@ input[type="checkbox"]{
   text-align: center;
   margin: auto;
 }
+
+.webname, .webname:hover, .webname:focus, .webname:active {
+  text-decoration: none;
+  color: #f2f2f2;
+  transition: all 0.3s ease;
+}
+
+.games {
+  text-decoration: none;
+  color: black;
+}
