--- a/standings/style.css
+++ b/standings/style.css
@@ -115,3 +115,8 @@ input[type="checkbox"]{
   font-weight: 700;
 }
 
+.webname, .webname:hover, .webname:focus, .webname:active {
+  text-decoration: none;
+  color: #f2f2f2;
+  transition: all 0.3s ease;
+}
