--- a/standings/style.css
+++ b/standings/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
-nav{
+.standingsnav{
   display: flex;
   height: 60px;
   width: 100%;
@@ -121,6 +121,12 @@ input[type="checkbox"]{
 }
 
 .leaguesnav {
-  color: #111;
+  display: flex;
   height: 45px;
+  width: 100%;
+  background: #111;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px 0 100px;
+  flex-wrap: wrap;
 }
