--- a/standings/style.css
+++ b/standings/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
-.standingsnav{
+.standings{
   display: flex;
   height: 60px;
   width: 100%;
