--- a/standings/style.css
+++ b/standings/style.css
@@ -28,7 +28,7 @@ nav ul{
 nav ul li{
   margin: 0 5px;
 }
-nav ul li a{
+.topnav{
   color: #f2f2f2;
   text-decoration: none;
   font-size: 18px;
@@ -129,4 +129,15 @@ input[type="checkbox"]{
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
+}
+
+.bottomnav{
+  color: #f2f2f2;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 4px 12px;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
 }
