--- a/livestreams/1/style.css
+++ b/livestreams/1/style.css
@@ -125,8 +125,7 @@ input[type="checkbox"]{
 }
 
 .gamelinks {
-    text-decoration: none;
-    color: black;
+    color: greenyellow;
 }
 
 .webname, .webname:hover, .webname:focus, .webname:active {
