--- a/livestreams/4/style.css
+++ b/livestreams/4/style.css
@@ -134,3 +134,8 @@ h2, h2:hover, h2:focus, h2:active {
   color: #f2f2f2;
   transition: all 0.3s ease;
 }
+
+.gamelinks {
+  color: #3de327;
+  text-decoration: underline;
+}
