--- a/livestreams/6/style.css
+++ b/livestreams/6/style.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+
+.gamelinks {
+  color: #3de327;
+  text-decoration: underline;
+}
 nav{
   display: flex;
   height: 60px;
