--- a/standings/seriea/style.css
+++ b/standings/seriea/style.css
@@ -1,10 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.flex-child {
+  flex: 1;
+  border: 1px solid rgb(185, 185, 185);
+}  
+
+.flex-child:first-child {
+  margin-right: 20px;
 } 
+
 .standings{
   display: flex;
   height: 60.0px;
