--- a/standings/seriea/style.css
+++ b/standings/seriea/style.css
@@ -7,6 +7,13 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+.api_football_flag {
+  display: none;
+}
+
+.api_football_header>span {
+  display: none;
+}
 
 .standings{
   display: flex;
