--- a/standings/seriea/style.css
+++ b/standings/seriea/style.css
@@ -132,6 +132,7 @@ input[type="checkbox"]{
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
+  margin-bottom: 10px;
 }
 
 .bottomnav{
