--- a/standings/laliga/style.css
+++ b/standings/laliga/style.css
@@ -129,6 +129,8 @@ input[type="checkbox"]{
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
+  padding-bottom: 10px;
+
 }
 
 .bottomnav{
