--- a/standings/bundesliga/style.css
+++ b/standings/bundesliga/style.css
@@ -129,7 +129,7 @@ input[type="checkbox"]{
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .bottomnav{
