--- a/api-football.css
+++ b/api-football.css
@@ -3,9 +3,9 @@ Version : 1.1.8
  */
  :root {
     --font: "Raleway", sans-serif;
-    --background-color: #000;
+    --background-color: white;
     --background-color-header: #5fbd46;
-    --color-text: #fff;
+    --color-text: #000;
     --color-text-header: #fff;
     --color-green: #60ab65;
     --color-red: #ff596a;
