--- a/livestreams/6/style.css
+++ b/livestreams/6/style.css
@@ -123,7 +123,10 @@ input[type="checkbox"]{
 .streamlist {
   text-align: center;
 }
-
+.gamelinks {
+  color: #3de327;
+  text-decoration: underline;
+}
 .adflylinks {
   text-align: center;
   margin: auto;
