--- a/livestreams/11/style.css
+++ b/livestreams/11/style.css
@@ -114,74 +114,23 @@ input[type="checkbox"]{
   font-size: 40px;
   font-weight: 700;
 }
-body {
-    margin: 0;
+
+.streamlist {
+  text-align: center;
 }
 
-.banner{
-    background-color: #48f756;
-    padding: 10px;
+.adflylinks {
+  text-align: center;
+  margin: auto;
 }
 
-.wg-api-football-fixtures{
-    align-items: center;
-    margin: 0 auto;
-    padding-top: 10px;
-    white-space: nowrap;
+h2, h2:hover, h2:focus, h2:active {
+  text-decoration: none;
+  color: #000000;
 }
- .banner__header{
-    white-space: nowrap;
-}
-
-.banner__header > h1 {
-  width: 200px;
-  display: inline-block;
-}
-.cs{
-    background-color: black;
-    display: inline-block;
-  }
-#scoreaxis-widget-eac96 {
-  display: inline-block;
-  }
 
 .webname, .webname:hover, .webname:focus, .webname:active {
-    text-decoration: none;
-    color: #f2f2f2;
-    transition: all 0.3s ease;
-  }
-
-
-
-
-  /* Place the navbar at the bottom of the page, and make it stick */
-.navbar {
-  background-color: #333;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-/* Style the links inside the navigation bar */
-.bnavbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.bnavbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.bnavbar a.active {
-  background-color: #04AA6D;
-  color: white;
+  color: #f2f2f2;
+  transition: all 0.3s ease;
 }
