--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
 
 
   /* Place the navbar at the bottom of the page, and make it stick */
-.navbar {
+.bnavbar {
   background-color: #333;
   overflow: hidden;
   position: fixed;
@@ -182,6 +182,6 @@ body {
 
 /* Add a color to the active/current link */
 .bnavbar a.active {
-  background-color: #04AA6D;
-  color: white;
+  background-color: #96f0a2;
+  color: black;
 }
