--- a/style.css
+++ b/style.css
@@ -158,30 +158,26 @@ body {
 .bnavbar {
   background-color: #333;
   overflow: hidden;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
+  height: 20px;
 }
 
 /* Style the links inside the navigation bar */
 .bnavbar a {
-  float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.bnavbar a:hover {
-  background-color: #ddd;
-  color: black;
+  padding: 14px 181.3px;
+  text-decoration: underline;
+  font-size: 10px;
 }
 
 /* Add a color to the active/current link */
 .bnavbar a.active {
   background-color: #96f0a2;
   color: black;
+  position: relative;
+  top: -10px;
 }
