--- a/standings/bundesliga/style.css
+++ b/standings/bundesliga/style.css
@@ -132,6 +132,35 @@ input[type="checkbox"]{
   margin-bottom: 10px;
 }
 
+  /* Place the navbar at the bottom of the page, and make it stick */
+  .bnavbar {
+    background-color: #333;
+    overflow: hidden;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .bnavbar a {
+    float:left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 181.3px;
+    text-decoration: underline;
+    font-size: 10px;
+  }
+  
+  /* Add a color to the active/current link */
+  .bnavbar a.active {
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    position: relative;
+    top: -12px;
+    width: 33.33333333333333%
+  } 
 .bottomnav{
   color: #f2f2f2;
   text-decoration: none;
