--- a/livestreams/10/style.css
+++ b/livestreams/10/style.css
@@ -133,7 +133,7 @@ h2, h2:hover, h2:focus, h2:active {
   .bnavbar {
     background-color: #333;
     overflow: hidden;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 20px;
