--- a/livestreams/style.css
+++ b/livestreams/style.css
@@ -14,7 +14,7 @@
   .bnavbar {
     background-color: #333;
     overflow: hidden;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 20px;
