--- a/standings/ucl/style.css
+++ b/standings/ucl/style.css
@@ -137,7 +137,7 @@ input[type="checkbox"]{
   .bnavbar {
     background-color: #333;
     overflow: hidden;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 20px;
