--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
 .bnavbar {
   background-color: #333;
   overflow: hidden;
-  position: relative;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 20px;
