--- a/standings/style.css
+++ b/standings/style.css
@@ -15,10 +15,21 @@
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
 }
+nav{
+  display: flex;
+  height: 60px;
+  width: 100%;
+  background: #76e56b;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px 0 100px;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
 nav .logo{
   color: #fff;
   font-size: 35px;
-  font-weight: 600.0;
+  font-weight: 600;
 }
 nav ul{
   display: flex;
@@ -28,7 +39,7 @@ nav ul{
 nav ul li{
   margin: 0 5px;
 }
-.topnav{
+nav ul li a{
   color: #f2f2f2;
   text-decoration: none;
   font-size: 18px;
