--- a/test/style.css
+++ b/test/style.css
@@ -151,18 +151,9 @@ input[type="checkbox"]{
 width: 450px;
 text-align: center;
 margin: auto;
-display: grid;
-grid-template-columns: 1fr 1fr; /* set column sizes here */
-grid-template-rows: auto auto; /* we want two rows */
-
-grid-gap: 10px; /* how far between cells? */
-grid-auto-flow: column; /* fill in by column, not row */
-
-/* temporary property for visualization */
-height: 150px;
 }
 
-/* .team1 {
+.team1 {
   display: inline;
 }
 
@@ -176,5 +167,5 @@ height: 150px;
 
 .score2 {
   display: inline;
-} */
+}
 
