--- a/test/style.css
+++ b/test/style.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+body {
+  background-color: #58cb47;
+}
 nav{
   display: flex;
   height: 60px;
@@ -153,10 +156,15 @@ text-align: center;
 margin: auto;
 display: block;
 background-color: #f4f4f4;
+border-top: 1px groove;
+border-left: 1px groove;
+border-right: 1px groove;
 }
 .league{
   font-size: large;
-  font-weight: 900;
+  font-weight: 700;
+  background-color: #e8e8e8;
+  border-bottom: 1px groove;
 }
 
 .team1 {
