--- a/test/style.css
+++ b/test/style.css
@@ -168,7 +168,13 @@ border-right: 1px groove;
   box-sizing: border-box;
   padding-left: 10px;
 }
-
+.status{
+  float: left;
+  margin-left: 10px;
+  margin-top: 12px;
+  border-right: 1px solid #cbcbcb;
+  padding-right: 8px;
+}
 .team1 {
   float: left;
   display: flex;
