--- a/test/style.css
+++ b/test/style.css
@@ -168,6 +168,7 @@ border-right: 1px groove;
   box-sizing: border-box;
   text-align: left;
   padding-left: 7px;
+  font-size: 15px;
 }
 .status{
   float: left;
