--- a/test/style.css
+++ b/test/style.css
@@ -170,7 +170,7 @@ border-right: 1px groove;
   padding-left: 10px;
   font-size: 15px;
 }
-.logo{
+.flag{
   height: 19px;
   padding-top: 2px;
   padding-left: 297px;
