--- a/test/style.css
+++ b/test/style.css
@@ -118,37 +118,6 @@ input[type="checkbox"]{
   font-weight: 700;
 }
 
-  /* Place the navbar at the bottom of the page, and make it stick */
-  .bnavbar {
-    background-color: #333;
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 20px;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .bnavbar a {
-    float:left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 181.3px;
-    text-decoration: underline;
-    font-size: 10px;
-  }
-  
-  /* Add a color to the active/current link */
-  .bnavbar a.active {
-    background-color: #000000;
-    color: rgb(255, 255, 255);
-    position: relative;
-    top: -12px;
-    width: 33.33333333333333%
-  } 
-
-
 .parentDiv:hover{
   background-color: #e8e8e8;
 }
@@ -225,4 +194,16 @@ border-right: 1px groove;
 .hide{
   opacity: 0;
 }
-             
+
+.middleCont {
+width: 33.333333333333333333333333333333%
+}
+
+.leftCont {
+width: 33.333333333333333333333333333333%
+
+}
+
+.rightCont {
+width: 33.333333333333333333333333333333%
+}
