--- a/test/style.css
+++ b/test/style.css
@@ -141,14 +141,13 @@ border-right: 1px groove;
   padding-left: 10px;
   font-size: 15px;
   display: flex;
+  justify-content: space-between;
 }
 .flag{
   border: 1px solid #585858;
   border-radius: 9px;
   height: 19px;
   float: right;
-  position: absolute;
-  right: 538px;
   margin-top: 2px;
 }
 .status{
