--- a/test/style.css
+++ b/test/style.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+html,body {
+  height: 100%;
+}
 body {
   background-color: #58cb47;
 }
