--- a/test/style.css
+++ b/test/style.css
@@ -221,3 +221,13 @@ border-right: 1px groove;
   height: 100%;
 }
 
+.newsimg {
+    max-width: 40%;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 10px;
+    float: left;
+    margin-right: 10px;
+    border: 2px solid black;
+    border-radius: 7px;
+}
