--- a/test/style.css
+++ b/test/style.css
@@ -253,3 +253,8 @@ border-right: 1px groove;
 .newsel:hover {
   background-color: #e8e8e8;
 }
+
+.rounded {
+  border-top: 8px solid #bbb;
+  border-radius: 5px;
+}
