--- a/test/style.css
+++ b/test/style.css
@@ -234,6 +234,10 @@ border-right: 1px groove;
   margin-bottom: 8px;
 }
 
+.newsimg:hover {
+  background-color: #e8e8e8;
+
+}
 .addborder {
   border-top: 1px groove;
   border-left: 1px groove;
