--- a/news/style.css
+++ b/news/style.css
@@ -280,3 +280,9 @@ input[type="checkbox"]{
   p {
     text-align: justify;
   }
+
+  .gotd {
+    border: 1px solid black;
+    border-radius: 6px;
+    box-shadow: 0 0 30px rgb(0 0 0 / 30%);
+  }
