--- a/news/style.css
+++ b/news/style.css
@@ -286,3 +286,7 @@ input[type="checkbox"]{
     border-radius: 6px;
     box-shadow: 0 0 30px rgb(0 0 0 / 30%);
   }
+
+  .blueLink {
+    color: rgb(0, 187, 255);
+  }
