--- a/news/style.css
+++ b/news/style.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+html { visibility:hidden; }
+
 nav{
   display: flex;
   height: 60px;
