--- a/test/style.css
+++ b/test/style.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+html { visibility:hidden; }
+
 html,body {
   height: 100%;
 }
