--- a/test/style.css
+++ b/test/style.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+
+.hideThis {
+  visibility: hidden;
+}
+
 #cover 
 {position: fixed; height: 100%; width: 100%; top:0; left: 0; background: #000; z-index:9999;}
 
