--- a/test/style.css
+++ b/test/style.css
@@ -301,3 +301,16 @@ border-right: 1px groove;
 .rightDiv {
   text-align: center;
 }
+
+.rightBar {
+  font-weight: 700;
+  background-color: #e8e8e8;
+  border-bottom: 1px groove;
+  box-sizing: border-box;
+  text-align: left;
+  padding-left: 10px;
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px groove;
+}
