--- a/test/style.css
+++ b/test/style.css
@@ -318,3 +318,11 @@ border-right: 1px groove;
 .logo1 {
   height: 100px;
 }
+
+.fixtures-l {
+  margin-left: 91px;
+}
+
+.fixtures-r {
+  margin-right: 80px;
+}
