--- a/test/style.css
+++ b/test/style.css
@@ -320,12 +320,12 @@ border-right: 1px groove;
   display: inline-block;
 }
 
-.fixtures-l {
+.fixturel {
   display: inline-block;
   margin-left: 91px;
 }
 
-.fixtures-r { 
+.fixturer { 
   display: inline-block;
   margin-right: 100px;
 }
