--- a/test/style.css
+++ b/test/style.css
@@ -335,9 +335,11 @@ border-right: 1px groove;
 }
 
 .fixtureScoreRight {
+  display: inline-block;
   margin-right: 67px;
 }
 
 .fixtureScoreLeft {
+  display: inline-block;
   margin-left: 69px;
 }
