--- a/test/style.css
+++ b/test/style.css
@@ -326,6 +326,8 @@ border-right: 1px groove;
   width: 70px;
   display: inline-block;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  border: 1px solid lightgray;
+  border-radius: 130px;
 }
 
 .fixturel {
