--- a/test/style.css
+++ b/test/style.css
@@ -392,6 +392,7 @@ border-right: 1px groove;
   transition: all 0.3s ease;
   border-radius: 5px;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  transition: all 0.3s ease;
 
 }
 
@@ -408,6 +409,7 @@ border-right: 1px groove;
   transition: all 0.3s ease;
   border-radius: 5px;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  transition: all 0.3s ease;
 
 }
 
@@ -424,6 +426,7 @@ border-right: 1px groove;
   transition: all 0.3s ease;
   border-radius: 5px;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  transition: all 0.3s ease;
 
 }
 
