--- a/test/style.css
+++ b/test/style.css
@@ -435,6 +435,6 @@ border-right: 1px groove;
   padding: 0px;
   flex-wrap: nowrap;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
-
+  padding: 7px;
 }
 
