--- a/test/style.css
+++ b/test/style.css
@@ -438,3 +438,12 @@ border-right: 1px groove;
   padding: 7px;
 }
 
+.clicked {
+    background: #ffffff;
+    color: black;
+    transition: all 0.3s ease;
+    border-radius: 45px;
+    box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+    transition: all 0.3s ease;
+}
+
