--- a/test/style.css
+++ b/test/style.css
@@ -479,7 +479,7 @@ border-right: 1px groove;
   width: 50%;
 }
 
-.start11 {
+.startEleven {
     display: flex;
     font-weight: 600;
     justify-content: space-evenly;
