--- a/test/style.css
+++ b/test/style.css
@@ -307,14 +307,15 @@ border-bottom: 1px groove;
 .rightDiv {
   text-align: center;
   overflow: hidden; 
-  background: #cbffd2;
+  background: #696969;
+  color: white;
 }
 .rightDivScores {
   text-align: center;
   overflow: hidden; 
   padding-top: 18px;
   padding-bottom: 18px;
-  background: #cbffd2;
+  background: #c9c9c9;
 }
 
 .rightBar {
@@ -437,7 +438,7 @@ border-bottom: 1px groove;
 }
 
 .navbarMini {
-  background: #cbffd2;
+  background: #c9c9c9;
   padding: 0px;
   flex-wrap: nowrap;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
