--- a/test/style.css
+++ b/test/style.css
@@ -156,6 +156,7 @@ border-bottom: 1px groove;
   height: 19px;
   float: right;
   margin-top: 2px;
+  margin-right: 2px;
 }
 .status{
   float: left;
