--- a/test/style.css
+++ b/test/style.css
@@ -489,6 +489,14 @@ border-bottom: 1px groove;
   width: 50%;
 }
 
+.statsC {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+
 .statsC>div{
   width: 33%
 }
