--- a/test/style.css
+++ b/test/style.css
@@ -498,7 +498,8 @@ border-bottom: 1px groove;
 
 
 .statsC>div{
-  width: 33%
+  width: 33.3333333333333333333333333333333333333333333333333333333%;
+  border-bottom: 1px solid #afa6a6;
 }
 
 .awayStats {
