--- a/test/style.css
+++ b/test/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -357,6 +358,7 @@ border-bottom: 1px groove;
   margin-right: 40px;
   font-size: 30px;
   font-weight: 500;
+  font-family: 'Kdam Thmor Pro', monospace;
 }
 
 .statsButton{
