--- a/test/style.css
+++ b/test/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');*{
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -357,8 +358,8 @@ border-bottom: 1px groove;
   margin-right: 40px;
   font-size: 30px;
   font-weight: 500;
-  font-family: 'Space Mono', monospace;}
-
+  font-family: 'Roboto Mono', monospace;
+}
 .statsButton{
   padding-left: 32px;
   padding-right: 32px;
